--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "build": "echo \"No build step needed\"",
-        "start": "nodemon index.js",
+        "start": "node index.js",
+        "dev": "nodemon index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "lockfileVersion": 3,
@@ -3769,6 +3770,7 @@
         }
     },
     "dependencies": {
+        "@langchain/core": "^0.3.56",
         "bcrypt": "^5.1.1",
         "child_process": "^1.0.2",
         "cors": "^2.8.5",
